crates/toml_edit/fixtures/invalid/control/rawstring-del.stderr
TOML parse error at line 1, column 22
  |
1 | rawstring-del = 'null'
  |                      ^
Invalid literal string
